--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@ riderModule.iml
 .idea
 Debug
 x64
+/.vs/PixelGunCheat/v17
+/.vs/PixelGunCheatInternal/v17
+/.vs/PixelGunCheat/FileContentIndex
+/PixelGunCheat/PixelGunCheat.vcxproj.filters
+/.vs
+/PixelGunCheat/PixelGunCheat.vcxproj.user
