--- a/PixelGunCheat/PixelGunCheat.vcxproj
+++ b/PixelGunCheat/PixelGunCheat.vcxproj
@@ -273,6 +273,7 @@
     <ClInclude Include="Cheat\Module\Impl\ModuleRewardsMultiplier.h" />
     <ClInclude Include="Cheat\Module\Impl\ModuleScoreMultiplier.h" />
     <ClInclude Include="Cheat\Module\Impl\ModuleInstantCharge.h" />
+    <ClInclude Include="Cheat\Module\Impl\ModuleSeasonPass.h" />
     <ClInclude Include="Cheat\Module\Impl\ModuleSpeed.h" />
     <ClInclude Include="Cheat\Module\Impl\ModuleSpread.h" />
     <ClInclude Include="Cheat\Module\Impl\ModuleExtraDisplay.h" />
