--- a/PixelGunCheat/PixelGunCheat.vcxproj
+++ b/PixelGunCheat/PixelGunCheat.vcxproj
@@ -284,7 +284,7 @@
     <ClInclude Include="Cheat\Module\Impl\ModuleSpeed.h" />
     <ClInclude Include="Cheat\Module\Impl\ModuleSpread.h" />
     <ClInclude Include="Cheat\Module\Impl\ModuleExtraDisplay.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleUnlockAllWeapons.h" />
+    <ClInclude Include="Cheat\Module\Impl\ModuleUnlockWeapons.h" />
     <ClInclude Include="Cheat\Module\Impl\ModuleXRay.h" />
     <ClInclude Include="Cheat\Module\ModuleBase.h" />
     <ClCompile Include="kiero\kiero.h" />
