--- a/PixelGunCheat/PixelGunCheat.vcxproj
+++ b/PixelGunCheat/PixelGunCheat.vcxproj
@@ -248,6 +248,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Cheat\Data\Armor.h" />
+    <ClInclude Include="Cheat\Data\Currency.h" />
     <ClInclude Include="Cheat\Data\Pets.h" />
     <ClInclude Include="Cheat\Data\Weapons.h" />
     <ClInclude Include="Cheat\Gui\imgui_hooker.h" />
