Major reformatting, new modules, and slightly updated gui

--- a/PixelGunCheat/PixelGunCheat.vcxproj
+++ b/PixelGunCheat/PixelGunCheat.vcxproj
@@ -255,47 +255,52 @@
     <ClInclude Include="Cheat\Hooks\Hooks.h" />
     <ClInclude Include="Cheat\Internal\Functions.h" />
     <ClInclude Include="Cheat\Logger\Logger.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleAddArmor.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleAddCurrency.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleAddPets.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleAimBot.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleAntiBarrier.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleAntiImmortal.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleAntiKick.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleAOEBullets.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleArrayList.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleBetterScope.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleCriticals.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleDamageMultiplier.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleDebuffer.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleDoubleJump.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleESP.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleFOVChanger.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleFrostAura.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleFullAuto.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleAntiHeadshot.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleImmortality.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleImmunity.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleInfiniteArmor.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleHeal.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleInfiniteAmmo.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleInfiniteGemClaim.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleInvisibility.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModulePriceModifier.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleRapidFire.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleReach.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleRecoil.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleHeadshotMultiplier.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleRewardsMultiplier.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleScoreMultiplier.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleInstantCharge.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleSeasonPass.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleSpeed.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleSpread.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleTest.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleUnlockWeapons.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleWeaponSpoofer.h" />
-    <ClInclude Include="Cheat\Module\Impl\ModuleXRay.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleAimBot.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleAntiBarrier.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleAntiImmortal.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleAOEBullets.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleBlinder.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleCriticals.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleDamageMultiplier.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleDebuffer.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleFrostAura.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleFullAuto.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleHeadshotMultiplier.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleInstantCharge.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModulePolymorpher.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleRapidFire.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleRecoil.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleSpread.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleAddArmor.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleAddCurrency.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleAddPets.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleInfiniteGemClaim.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModulePriceModifier.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleRewardsMultiplier.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleSeasonPass.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleTest.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleUnlockWeapons.h" />
+    <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleWeaponSpoofer.h" />
+    <ClInclude Include="Cheat\Module\Impl\General\ModuleScoreMultiplier.h" />
+    <ClInclude Include="Cheat\Module\Impl\Movement\ModuleBetterDash.h" />
+    <ClInclude Include="Cheat\Module\Impl\Movement\ModuleDoubleJump.h" />
+    <ClInclude Include="Cheat\Module\Impl\Movement\ModuleFly.h" />
+    <ClInclude Include="Cheat\Module\Impl\Movement\ModuleSpeed.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleAntiHeadshot.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleGadgetActivator.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleHeal.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleImmortality.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleImmunity.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleInfiniteAmmo.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleInfiniteArmor.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleInvisibility.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleReach.h" />
+    <ClInclude Include="Cheat\Module\Impl\Visual\ModuleArrayList.h" />
+    <ClInclude Include="Cheat\Module\Impl\Visual\ModuleBetterScope.h" />
+    <ClInclude Include="Cheat\Module\Impl\Visual\ModuleESP.h" />
+    <ClInclude Include="Cheat\Module\Impl\Visual\ModuleFOVChanger.h" />
+    <ClInclude Include="Cheat\Module\Impl\Visual\ModuleLegacyAnimations.h" />
+    <ClInclude Include="Cheat\Module\Impl\Visual\ModuleXRay.h" />
     <ClInclude Include="Cheat\Module\ModuleBase.h" />
     <ClCompile Include="kiero\kiero.h" />
     <ClInclude Include="Cheat\Offsets\Offsets.h" />
