--- a/PixelGunCheat/PixelGunCheat.vcxproj
+++ b/PixelGunCheat/PixelGunCheat.vcxproj
@@ -274,6 +274,7 @@
     <ClInclude Include="Cheat\Module\Impl\Combat\ModuleRapidFire.h" />
     <ClInclude Include="Cheat\Module\Impl\Combat\ModuleRecoil.h" />
     <ClInclude Include="Cheat\Module\Impl\Combat\ModuleSpread.h" />
+    <ClInclude Include="Cheat\Module\Impl\Combat\ModuleTeamKill.h" />
     <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleAddArmor.h" />
     <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleAddCurrency.h" />
     <ClInclude Include="Cheat\Module\Impl\Exploit\ModuleAddPets.h" />
@@ -293,6 +294,7 @@
     <ClInclude Include="Cheat\Module\Impl\Movement\ModuleSpeed.h" />
     <ClInclude Include="Cheat\Module\Impl\Player\ModuleAntiHeadshot.h" />
     <ClInclude Include="Cheat\Module\Impl\Player\ModuleGadgetActivator.h" />
+    <ClInclude Include="Cheat\Module\Impl\Player\ModuleGadgetModifier.h" />
     <ClInclude Include="Cheat\Module\Impl\Player\ModuleHeal.h" />
     <ClInclude Include="Cheat\Module\Impl\Player\ModuleImmortality.h" />
     <ClInclude Include="Cheat\Module\Impl\Player\ModuleImmunity.h" />
